horizontal scroll fix

--- a/pwa/src/templates/jumbotronTemplate/JumbotronTemplate.module.css
+++ b/pwa/src/templates/jumbotronTemplate/JumbotronTemplate.module.css
@@ -47,3 +47,10 @@
     var(--conduction-card-wrapper-color)
   ) !important;
 }
+
+@media (max-width: 400px) {
+  .card {
+    padding-inline-start: 15px !important;
+    padding-inline-end: 15px !important;
+  }
+}
